# concern-harness

./: .gitignore  README.md  README.stub.md  pyproject.toml
configs/: audit_mode.yaml  claude_opus_4_7.yaml  claude_opus_4_8.yaml  cli_agent.yaml  dummy.yaml  dummy_last_slot.yaml  external_openai_harness.yaml  fugu_openai_compatible.yaml  fugu_ultra_openai_compatible.yaml  guarded_mode.yaml  http_agent.yaml  local_7b.yaml  local_coding_agent.yaml  moe_48.yaml  openrouter_opus_4_8.yaml  oracle.yaml  provider_big.yaml
docs/: DESIGN_ROADMAP.md  EVIDENCE.md  LBAH_CODE.md  PAPER_DRAFT.md  SOTA_HARNESS_INTEGRATION.md  THEORY.md
lbah/: __init__.py  cli.py
scripts/: ablation_matched_prompt.py  adversarial_eval.py  bfcl_simple_eval.py  compare_raw_vs_harness.py  concern_mapper_eval.py  contamination_real_agent_eval.py  empirical_bound_test.py  eval_external_action.py  export_swebench_instances.py  harness_effects_matrix.py  heldout_proxy_twins.py  inject_swebench_leaks.py  lbah_autoresearch.py  modal_lbah_swebench_generate.py  modal_lbah_swebench_tournament.py  overblocking_test.py  read_set_load_bearing.py  run_head_to_head.py  run_leak_control_matrix.py  run_official_swebench.py  run_sealed_unsealed.py  run_two_way_gauge.py  run_wrap_matrix.py  runtime_contamination_eval.py  summarize_swebench_candidates.py  swebench_lite_mini.py  token_accounting.py
tests/: test_citation_hygiene.py  test_coding_harness.py  test_contamination_real_agent.py  test_diagnostics.py  test_events.py  test_external_harness.py  test_gauge_carrier_sweep.py  test_gauge_probe_wiring.py  test_head_to_head.py  test_official_swebench_runner.py  test_orchestration_auditor.py  test_phase0_cli_telemetry.py  (+17 more)
(+142 files in other folders)
