[project]
name = "lbah"
version = "0.1.0"
description = "Load-Bearing Agent Harness: runtime, eval, and observability for concern-preserving agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "General Intelligence Company" }]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
swebench = [
    "anthropic>=0.40",
    "datasets>=2.18",
    "swebench==4.1.0",
]

[project.scripts]
lbah = "lbah.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lbah*"]

[tool.setuptools.package-data]
lbah = ["prompts/*.txt", "benches/**/*.yaml"]

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".tox",
    ".venv",
    "build",
    "dist",
    "runs",
]
